src/lexer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    CUSTOM_TYPE
    MOD
    NULL
    NULLABLE
    RETURN
    STATIC
    THIS

Grammar

Rule 0     S' -> program
Rule 1     statement -> CLASS ID LBRACE class_body RBRACE
Rule 2     type -> INT_TYPE
Rule 3     type -> STRING_TYPE
Rule 4     type -> BOOL_TYPE
Rule 5     type -> DOUBLE_TYPE
Rule 6     type -> ID
Rule 7     statement -> type ID ASSIGN expression SEMI
Rule 8     statement -> VAR ID ASSIGN expression SEMI
Rule 9     statement -> FINAL ID ASSIGN expression SEMI
Rule 10    statement -> ID ID ASSIGN NEW ID LPAREN RPAREN SEMI
Rule 11    statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE
Rule 12    statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
Rule 13    expression -> INT
Rule 14    expression -> expression PLUS expression
Rule 15    expression -> expression MINUS expression
Rule 16    expression -> expression TIMES expression
Rule 17    expression -> expression DIVIDE expression
Rule 18    expression -> STRING
Rule 19    expression -> TRUE
Rule 20    expression -> FALSE
Rule 21    expression -> expression AND expression
Rule 22    expression -> expression OR expression
Rule 23    expression -> NOT expression
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression NEQ expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> ID
Rule 28    expression -> expression DOT ID
Rule 29    statement -> NEWLINE
Rule 30    statement -> PRINT LPAREN expression RPAREN SEMI
Rule 31    expression -> STDIN DOT READLINESYNC LPAREN RPAREN
Rule 32    statement -> LIST LT type GT ID ASSIGN LBRACKET RBRACKET SEMI
Rule 33    statement -> LIST LT type GT ID ASSIGN LBRACKET group RBRACKET SEMI
Rule 34    statement -> LIST ID ASSIGN LBRACKET group RBRACKET SEMI
Rule 35    group -> expression COMA group
Rule 36    group -> expression
Rule 37    statement -> WHILE LPAREN expression RPAREN LBRACE statement RBRACE
Rule 38    statement -> FOR LPAREN for_init SEMI expression SEMI for_update RPAREN LBRACE statement RBRACE
Rule 39    statement -> FOR LPAREN VAR ID IN expression RPAREN LBRACE statement RBRACE
Rule 40    for_init -> VAR ID ASSIGN expression
Rule 41    for_init -> type ID ASSIGN expression
Rule 42    for_init -> expression
Rule 43    for_update -> ID PLUS PLUS
Rule 44    for_update -> ID MINUS MINUS
Rule 45    for_update -> ID ASSIGN expression
Rule 46    statement -> MAP LT type COMA type GT ID ASSIGN LBRACE map_entries RBRACE SEMI
Rule 47    statement -> MAP LT type COMA type GT ID ASSIGN LBRACE RBRACE SEMI
Rule 48    map_entries -> map_entry COMA map_entries
Rule 49    map_entries -> map_entry
Rule 50    map_entry -> expression COLON expression
Rule 51    statement -> SET LT type GT ID ASSIGN LBRACE set_elements RBRACE SEMI
Rule 52    statement -> SET LT type GT ID ASSIGN LBRACE RBRACE SEMI
Rule 53    set_elements -> expression COMA set_elements
Rule 54    set_elements -> expression
Rule 55    expression -> DOUBLE
Rule 56    expression -> expression PLUS DOUBLE
Rule 57    expression -> expression MINUS DOUBLE
Rule 58    expression -> expression TIMES DOUBLE
Rule 59    expression -> expression DIVIDE DOUBLE
Rule 60    expression -> DOUBLE PLUS expression
Rule 61    expression -> DOUBLE MINUS expression
Rule 62    expression -> DOUBLE TIMES expression
Rule 63    expression -> DOUBLE DIVIDE expression
Rule 64    class_body -> <empty>
Rule 65    class_body -> statement
Rule 66    class_body -> statement class_body
Rule 67    statement -> VOID ID LPAREN param_list RPAREN LBRACE statement RBRACE
Rule 68    statement -> VOID ID LPAREN RPAREN LBRACE statement RBRACE
Rule 69    param_list -> param COMA param_list
Rule 70    param_list -> param
Rule 71    param -> type ID
Rule 72    program -> statements
Rule 73    statement -> <empty>
Rule 74    statements -> statements statement
Rule 75    statements -> statement

Terminals, with rules where they appear

AND                  : 21
ASSIGN               : 7 8 9 10 32 33 34 40 41 45 46 47 51 52
BOOL                 : 
BOOL_TYPE            : 4
CLASS                : 1
COLON                : 50
COMA                 : 35 46 47 48 53 69
CUSTOM_TYPE          : 
DIVIDE               : 17 59 63
DOT                  : 28 31
DOUBLE               : 55 56 57 58 59 60 61 62 63
DOUBLE_TYPE          : 5
ELSE                 : 12
EQ                   : 24
FALSE                : 20
FINAL                : 9
FOR                  : 38 39
GT                   : 32 33 46 47 51 52
ID                   : 1 6 7 8 9 10 10 10 27 28 32 33 34 39 40 41 43 44 45 46 47 51 52 67 68 71
IF                   : 11 12
IN                   : 39
INT                  : 13
INT_TYPE             : 2
LBRACE               : 1 11 12 12 37 38 39 46 47 51 52 67 68
LBRACKET             : 32 33 34
LIST                 : 32 33 34
LPAREN               : 10 11 12 26 30 31 37 38 39 67 68
LT                   : 32 33 46 47 51 52
MAP                  : 46 47
MINUS                : 15 44 44 57 61
MOD                  : 
NEQ                  : 25
NEW                  : 10
NEWLINE              : 29
NOT                  : 23
NULL                 : 
NULLABLE             : 
OR                   : 22
PLUS                 : 14 43 43 56 60
PRINT                : 30
RBRACE               : 1 11 12 12 37 38 39 46 47 51 52 67 68
RBRACKET             : 32 33 34
READLINESYNC         : 31
RETURN               : 
RPAREN               : 10 11 12 26 30 31 37 38 39 67 68
SEMI                 : 7 8 9 10 30 32 33 34 38 38 46 47 51 52
SET                  : 51 52
STATIC               : 
STDIN                : 31
STRING               : 18
STRING_TYPE          : 3
THIS                 : 
TIMES                : 16 58 62
TRUE                 : 19
VAR                  : 8 39 40
VOID                 : 67 68
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

class_body           : 1 66
expression           : 7 8 9 11 12 14 14 15 15 16 16 17 17 21 21 22 22 23 24 24 25 25 26 28 30 35 36 37 38 39 40 41 42 45 50 50 53 54 56 57 58 59 60 61 62 63
for_init             : 38
for_update           : 38
group                : 33 34 35
map_entries          : 46 48
map_entry            : 48 49
param                : 69 70
param_list           : 67 69
program              : 0
set_elements         : 51 53
statement            : 11 12 12 37 38 39 65 66 67 68 74 75
statements           : 72 74
type                 : 7 32 33 41 46 46 47 47 51 52 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (72) program -> . statements
    (74) statements -> . statements statement
    (75) statements -> . statement
    (1) statement -> . CLASS ID LBRACE class_body RBRACE
    (7) statement -> . type ID ASSIGN expression SEMI
    (8) statement -> . VAR ID ASSIGN expression SEMI
    (9) statement -> . FINAL ID ASSIGN expression SEMI
    (10) statement -> . ID ID ASSIGN NEW ID LPAREN RPAREN SEMI
    (11) statement -> . IF LPAREN expression RPAREN LBRACE statement RBRACE
    (12) statement -> . IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
    (29) statement -> . NEWLINE
    (30) statement -> . PRINT LPAREN expression RPAREN SEMI
    (32) statement -> . LIST LT type GT ID ASSIGN LBRACKET RBRACKET SEMI
    (33) statement -> . LIST LT type GT ID ASSIGN LBRACKET group RBRACKET SEMI
    (34) statement -> . LIST ID ASSIGN LBRACKET group RBRACKET SEMI
    (37) statement -> . WHILE LPAREN expression RPAREN LBRACE statement RBRACE
    (38) statement -> . FOR LPAREN for_init SEMI expression SEMI for_update RPAREN LBRACE statement RBRACE
    (39) statement -> . FOR LPAREN VAR ID IN expression RPAREN LBRACE statement RBRACE
    (46) statement -> . MAP LT type COMA type GT ID ASSIGN LBRACE map_entries RBRACE SEMI
    (47) statement -> . MAP LT type COMA type GT ID ASSIGN LBRACE RBRACE SEMI
    (51) statement -> . SET LT type GT ID ASSIGN LBRACE set_elements RBRACE SEMI
    (52) statement -> . SET LT type GT ID ASSIGN LBRACE RBRACE SEMI
    (67) statement -> . VOID ID LPAREN param_list RPAREN LBRACE statement RBRACE
    (68) statement -> . VOID ID LPAREN RPAREN LBRACE statement RBRACE
    (73) statement -> .
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LIST resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
  ! shift/reduce conflict for SET resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for BOOL_TYPE resolved as shift
  ! shift/reduce conflict for DOUBLE_TYPE resolved as shift
    CLASS           shift and go to state 4
    VAR             shift and go to state 7
    FINAL           shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    NEWLINE         shift and go to state 10
    PRINT           shift and go to state 11
    LIST            shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    MAP             shift and go to state 15
    SET             shift and go to state 16
    VOID            shift and go to state 17
    $end            reduce using rule 73 (statement -> .)
    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21

  ! CLASS           [ reduce using rule 73 (statement -> .) ]
  ! VAR             [ reduce using rule 73 (statement -> .) ]
  ! FINAL           [ reduce using rule 73 (statement -> .) ]
  ! ID              [ reduce using rule 73 (statement -> .) ]
  ! IF              [ reduce using rule 73 (statement -> .) ]
  ! NEWLINE         [ reduce using rule 73 (statement -> .) ]
  ! PRINT           [ reduce using rule 73 (statement -> .) ]
  ! LIST            [ reduce using rule 73 (statement -> .) ]
  ! WHILE           [ reduce using rule 73 (statement -> .) ]
  ! FOR             [ reduce using rule 73 (statement -> .) ]
  ! MAP             [ reduce using rule 73 (statement -> .) ]
  ! SET             [ reduce using rule 73 (statement -> .) ]
  ! VOID            [ reduce using rule 73 (statement -> .) ]
  ! INT_TYPE        [ reduce using rule 73 (statement -> .) ]
  ! STRING_TYPE     [ reduce using rule 73 (statement -> .) ]
  ! BOOL_TYPE       [ reduce using rule 73 (statement -> .) ]
  ! DOUBLE_TYPE     [ reduce using rule 73 (statement -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (72) program -> statements .
    (74) statements -> statements . statement
    (1) statement -> . CLASS ID LBRACE class_body RBRACE
    (7) statement -> . type ID ASSIGN expression SEMI
    (8) statement -> . VAR ID ASSIGN expression SEMI
    (9) statement -> . FINAL ID ASSIGN expression SEMI
    (10) statement -> . ID ID ASSIGN NEW ID LPAREN RPAREN SEMI
    (11) statement -> . IF LPAREN expression RPAREN LBRACE statement RBRACE
    (12) statement -> . IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
    (29) statement -> . NEWLINE
    (30) statement -> . PRINT LPAREN expression RPAREN SEMI
    (32) statement -> . LIST LT type GT ID ASSIGN LBRACKET RBRACKET SEMI
    (33) statement -> . LIST LT type GT ID ASSIGN LBRACKET group RBRACKET SEMI
    (34) statement -> . LIST ID ASSIGN LBRACKET group RBRACKET SEMI
    (37) statement -> . WHILE LPAREN expression RPAREN LBRACE statement RBRACE
    (38) statement -> . FOR LPAREN for_init SEMI expression SEMI for_update RPAREN LBRACE statement RBRACE
    (39) statement -> . FOR LPAREN VAR ID IN expression RPAREN LBRACE statement RBRACE
    (46) statement -> . MAP LT type COMA type GT ID ASSIGN LBRACE map_entries RBRACE SEMI
    (47) statement -> . MAP LT type COMA type GT ID ASSIGN LBRACE RBRACE SEMI
    (51) statement -> . SET LT type GT ID ASSIGN LBRACE set_elements RBRACE SEMI
    (52) statement -> . SET LT type GT ID ASSIGN LBRACE RBRACE SEMI
    (67) statement -> . VOID ID LPAREN param_list RPAREN LBRACE statement RBRACE
    (68) statement -> . VOID ID LPAREN RPAREN LBRACE statement RBRACE
    (73) statement -> .
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LIST resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
  ! shift/reduce conflict for SET resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 72 (program -> statements .)
  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for BOOL_TYPE resolved as shift
  ! shift/reduce conflict for DOUBLE_TYPE resolved as shift
    $end            reduce using rule 72 (program -> statements .)
    CLASS           shift and go to state 4
    VAR             shift and go to state 7
    FINAL           shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    NEWLINE         shift and go to state 10
    PRINT           shift and go to state 11
    LIST            shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    MAP             shift and go to state 15
    SET             shift and go to state 16
    VOID            shift and go to state 17
    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21

  ! CLASS           [ reduce using rule 73 (statement -> .) ]
  ! VAR             [ reduce using rule 73 (statement -> .) ]
  ! FINAL           [ reduce using rule 73 (statement -> .) ]
  ! ID              [ reduce using rule 73 (statement -> .) ]
  ! IF              [ reduce using rule 73 (statement -> .) ]
  ! NEWLINE         [ reduce using rule 73 (statement -> .) ]
  ! PRINT           [ reduce using rule 73 (statement -> .) ]
  ! LIST            [ reduce using rule 73 (statement -> .) ]
  ! WHILE           [ reduce using rule 73 (statement -> .) ]
  ! FOR             [ reduce using rule 73 (statement -> .) ]
  ! MAP             [ reduce using rule 73 (statement -> .) ]
  ! SET             [ reduce using rule 73 (statement -> .) ]
  ! VOID            [ reduce using rule 73 (statement -> .) ]
  ! INT_TYPE        [ reduce using rule 73 (statement -> .) ]
  ! STRING_TYPE     [ reduce using rule 73 (statement -> .) ]
  ! BOOL_TYPE       [ reduce using rule 73 (statement -> .) ]
  ! DOUBLE_TYPE     [ reduce using rule 73 (statement -> .) ]
  ! $end            [ reduce using rule 73 (statement -> .) ]

    statement                      shift and go to state 22
    type                           shift and go to state 6

state 3

    (75) statements -> statement .

    CLASS           reduce using rule 75 (statements -> statement .)
    VAR             reduce using rule 75 (statements -> statement .)
    FINAL           reduce using rule 75 (statements -> statement .)
    ID              reduce using rule 75 (statements -> statement .)
    IF              reduce using rule 75 (statements -> statement .)
    NEWLINE         reduce using rule 75 (statements -> statement .)
    PRINT           reduce using rule 75 (statements -> statement .)
    LIST            reduce using rule 75 (statements -> statement .)
    WHILE           reduce using rule 75 (statements -> statement .)
    FOR             reduce using rule 75 (statements -> statement .)
    MAP             reduce using rule 75 (statements -> statement .)
    SET             reduce using rule 75 (statements -> statement .)
    VOID            reduce using rule 75 (statements -> statement .)
    INT_TYPE        reduce using rule 75 (statements -> statement .)
    STRING_TYPE     reduce using rule 75 (statements -> statement .)
    BOOL_TYPE       reduce using rule 75 (statements -> statement .)
    DOUBLE_TYPE     reduce using rule 75 (statements -> statement .)
    $end            reduce using rule 75 (statements -> statement .)


state 4

    (1) statement -> CLASS . ID LBRACE class_body RBRACE

    ID              shift and go to state 23


state 5

    (10) statement -> ID . ID ASSIGN NEW ID LPAREN RPAREN SEMI
    (6) type -> ID .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 24

  ! ID              [ reduce using rule 6 (type -> ID .) ]


state 6

    (7) statement -> type . ID ASSIGN expression SEMI

    ID              shift and go to state 25


state 7

    (8) statement -> VAR . ID ASSIGN expression SEMI

    ID              shift and go to state 26


state 8

    (9) statement -> FINAL . ID ASSIGN expression SEMI

    ID              shift and go to state 27


state 9

    (11) statement -> IF . LPAREN expression RPAREN LBRACE statement RBRACE
    (12) statement -> IF . LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE

    LPAREN          shift and go to state 28


state 10

    (29) statement -> NEWLINE .

    CLASS           reduce using rule 29 (statement -> NEWLINE .)
    VAR             reduce using rule 29 (statement -> NEWLINE .)
    FINAL           reduce using rule 29 (statement -> NEWLINE .)
    ID              reduce using rule 29 (statement -> NEWLINE .)
    IF              reduce using rule 29 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 29 (statement -> NEWLINE .)
    PRINT           reduce using rule 29 (statement -> NEWLINE .)
    LIST            reduce using rule 29 (statement -> NEWLINE .)
    WHILE           reduce using rule 29 (statement -> NEWLINE .)
    FOR             reduce using rule 29 (statement -> NEWLINE .)
    MAP             reduce using rule 29 (statement -> NEWLINE .)
    SET             reduce using rule 29 (statement -> NEWLINE .)
    VOID            reduce using rule 29 (statement -> NEWLINE .)
    INT_TYPE        reduce using rule 29 (statement -> NEWLINE .)
    STRING_TYPE     reduce using rule 29 (statement -> NEWLINE .)
    BOOL_TYPE       reduce using rule 29 (statement -> NEWLINE .)
    DOUBLE_TYPE     reduce using rule 29 (statement -> NEWLINE .)
    $end            reduce using rule 29 (statement -> NEWLINE .)
    RBRACE          reduce using rule 29 (statement -> NEWLINE .)


state 11

    (30) statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 29


state 12

    (32) statement -> LIST . LT type GT ID ASSIGN LBRACKET RBRACKET SEMI
    (33) statement -> LIST . LT type GT ID ASSIGN LBRACKET group RBRACKET SEMI
    (34) statement -> LIST . ID ASSIGN LBRACKET group RBRACKET SEMI

    LT              shift and go to state 30
    ID              shift and go to state 31


state 13

    (37) statement -> WHILE . LPAREN expression RPAREN LBRACE statement RBRACE

    LPAREN          shift and go to state 32


state 14

    (38) statement -> FOR . LPAREN for_init SEMI expression SEMI for_update RPAREN LBRACE statement RBRACE
    (39) statement -> FOR . LPAREN VAR ID IN expression RPAREN LBRACE statement RBRACE

    LPAREN          shift and go to state 33


state 15

    (46) statement -> MAP . LT type COMA type GT ID ASSIGN LBRACE map_entries RBRACE SEMI
    (47) statement -> MAP . LT type COMA type GT ID ASSIGN LBRACE RBRACE SEMI

    LT              shift and go to state 34


state 16

    (51) statement -> SET . LT type GT ID ASSIGN LBRACE set_elements RBRACE SEMI
    (52) statement -> SET . LT type GT ID ASSIGN LBRACE RBRACE SEMI

    LT              shift and go to state 35


state 17

    (67) statement -> VOID . ID LPAREN param_list RPAREN LBRACE statement RBRACE
    (68) statement -> VOID . ID LPAREN RPAREN LBRACE statement RBRACE

    ID              shift and go to state 36


state 18

    (2) type -> INT_TYPE .

    ID              reduce using rule 2 (type -> INT_TYPE .)
    GT              reduce using rule 2 (type -> INT_TYPE .)
    COMA            reduce using rule 2 (type -> INT_TYPE .)


state 19

    (3) type -> STRING_TYPE .

    ID              reduce using rule 3 (type -> STRING_TYPE .)
    GT              reduce using rule 3 (type -> STRING_TYPE .)
    COMA            reduce using rule 3 (type -> STRING_TYPE .)


state 20

    (4) type -> BOOL_TYPE .

    ID              reduce using rule 4 (type -> BOOL_TYPE .)
    GT              reduce using rule 4 (type -> BOOL_TYPE .)
    COMA            reduce using rule 4 (type -> BOOL_TYPE .)


state 21

    (5) type -> DOUBLE_TYPE .

    ID              reduce using rule 5 (type -> DOUBLE_TYPE .)
    GT              reduce using rule 5 (type -> DOUBLE_TYPE .)
    COMA            reduce using rule 5 (type -> DOUBLE_TYPE .)


state 22

    (74) statements -> statements statement .

    CLASS           reduce using rule 74 (statements -> statements statement .)
    VAR             reduce using rule 74 (statements -> statements statement .)
    FINAL           reduce using rule 74 (statements -> statements statement .)
    ID              reduce using rule 74 (statements -> statements statement .)
    IF              reduce using rule 74 (statements -> statements statement .)
    NEWLINE         reduce using rule 74 (statements -> statements statement .)
    PRINT           reduce using rule 74 (statements -> statements statement .)
    LIST            reduce using rule 74 (statements -> statements statement .)
    WHILE           reduce using rule 74 (statements -> statements statement .)
    FOR             reduce using rule 74 (statements -> statements statement .)
    MAP             reduce using rule 74 (statements -> statements statement .)
    SET             reduce using rule 74 (statements -> statements statement .)
    VOID            reduce using rule 74 (statements -> statements statement .)
    INT_TYPE        reduce using rule 74 (statements -> statements statement .)
    STRING_TYPE     reduce using rule 74 (statements -> statements statement .)
    BOOL_TYPE       reduce using rule 74 (statements -> statements statement .)
    DOUBLE_TYPE     reduce using rule 74 (statements -> statements statement .)
    $end            reduce using rule 74 (statements -> statements statement .)


state 23

    (1) statement -> CLASS ID . LBRACE class_body RBRACE

    LBRACE          shift and go to state 37


state 24

    (10) statement -> ID ID . ASSIGN NEW ID LPAREN RPAREN SEMI

    ASSIGN          shift and go to state 38


state 25

    (7) statement -> type ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 39


state 26

    (8) statement -> VAR ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 40


state 27

    (9) statement -> FINAL ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 41


state 28

    (11) statement -> IF LPAREN . expression RPAREN LBRACE statement RBRACE
    (12) statement -> IF LPAREN . expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
    (13) expression -> . INT
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . STRING
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . NOT expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ID
    (28) expression -> . expression DOT ID
    (31) expression -> . STDIN DOT READLINESYNC LPAREN RPAREN
    (55) expression -> . DOUBLE
    (56) expression -> . expression PLUS DOUBLE
    (57) expression -> . expression MINUS DOUBLE
    (58) expression -> . expression TIMES DOUBLE
    (59) expression -> . expression DIVIDE DOUBLE
    (60) expression -> . DOUBLE PLUS expression
    (61) expression -> . DOUBLE MINUS expression
    (62) expression -> . DOUBLE TIMES expression
    (63) expression -> . DOUBLE DIVIDE expression

    INT             shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LPAREN          shift and go to state 42
    ID              shift and go to state 49
    STDIN           shift and go to state 50
    DOUBLE          shift and go to state 51

    expression                     shift and go to state 43

state 29

    (30) statement -> PRINT LPAREN . expression RPAREN SEMI
    (13) expression -> . INT
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . STRING
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . NOT expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ID
    (28) expression -> . expression DOT ID
    (31) expression -> . STDIN DOT READLINESYNC LPAREN RPAREN
    (55) expression -> . DOUBLE
    (56) expression -> . expression PLUS DOUBLE
    (57) expression -> . expression MINUS DOUBLE
    (58) expression -> . expression TIMES DOUBLE
    (59) expression -> . expression DIVIDE DOUBLE
    (60) expression -> . DOUBLE PLUS expression
    (61) expression -> . DOUBLE MINUS expression
    (62) expression -> . DOUBLE TIMES expression
    (63) expression -> . DOUBLE DIVIDE expression

    INT             shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LPAREN          shift and go to state 42
    ID              shift and go to state 49
    STDIN           shift and go to state 50
    DOUBLE          shift and go to state 51

    expression                     shift and go to state 52

state 30

    (32) statement -> LIST LT . type GT ID ASSIGN LBRACKET RBRACKET SEMI
    (33) statement -> LIST LT . type GT ID ASSIGN LBRACKET group RBRACKET SEMI
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID

    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21
    ID              shift and go to state 54

    type                           shift and go to state 53

state 31

    (34) statement -> LIST ID . ASSIGN LBRACKET group RBRACKET SEMI

    ASSIGN          shift and go to state 55


state 32

    (37) statement -> WHILE LPAREN . expression RPAREN LBRACE statement RBRACE
    (13) expression -> . INT
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . STRING
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . NOT expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ID
    (28) expression -> . expression DOT ID
    (31) expression -> . STDIN DOT READLINESYNC LPAREN RPAREN
    (55) expression -> . DOUBLE
    (56) expression -> . expression PLUS DOUBLE
    (57) expression -> . expression MINUS DOUBLE
    (58) expression -> . expression TIMES DOUBLE
    (59) expression -> . expression DIVIDE DOUBLE
    (60) expression -> . DOUBLE PLUS expression
    (61) expression -> . DOUBLE MINUS expression
    (62) expression -> . DOUBLE TIMES expression
    (63) expression -> . DOUBLE DIVIDE expression

    INT             shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LPAREN          shift and go to state 42
    ID              shift and go to state 49
    STDIN           shift and go to state 50
    DOUBLE          shift and go to state 51

    expression                     shift and go to state 56

state 33

    (38) statement -> FOR LPAREN . for_init SEMI expression SEMI for_update RPAREN LBRACE statement RBRACE
    (39) statement -> FOR LPAREN . VAR ID IN expression RPAREN LBRACE statement RBRACE
    (40) for_init -> . VAR ID ASSIGN expression
    (41) for_init -> . type ID ASSIGN expression
    (42) for_init -> . expression
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID
    (13) expression -> . INT
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . STRING
    (19) expression -> . TRUE
    (20) expression -> . FALSE
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . NOT expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NEQ expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ID
    (28) expression -> . expression DOT ID
    (31) expression -> . STDIN DOT READLINESYNC LPAREN RPAREN
    (55) expression -> . DOUBLE
    (56) expression -> . expression PLUS DOUBLE
    (57) expression -> . expression MINUS DOUBLE
    (58) expression -> . expression TIMES DOUBLE
    (59) expression -> . expression DIVIDE DOUBLE
    (60) expression -> . DOUBLE PLUS expression
    (61) expression -> . DOUBLE MINUS expression
    (62) expression -> . DOUBLE TIMES expression
    (63) expression -> . DOUBLE DIVIDE expression

    VAR             shift and go to state 59
    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21
    ID              shift and go to state 60
    INT             shift and go to state 44
    STRING          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NOT             shift and go to state 48
    LPAREN          shift and go to state 42
    STDIN           shift and go to state 50
    DOUBLE          shift and go to state 51

    for_init                       shift and go to state 57
    expression                     shift and go to state 58
    type                           shift and go to state 61

state 34

    (46) statement -> MAP LT . type COMA type GT ID ASSIGN LBRACE map_entries RBRACE SEMI
    (47) statement -> MAP LT . type COMA type GT ID ASSIGN LBRACE RBRACE SEMI
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID

    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21
    ID              shift and go to state 54

    type                           shift and go to state 62

state 35

    (51) statement -> SET LT . type GT ID ASSIGN LBRACE set_elements RBRACE SEMI
    (52) statement -> SET LT . type GT ID ASSIGN LBRACE RBRACE SEMI
    (2) type -> . INT_TYPE
    (3) type -> . STRING_TYPE
    (4) type -> . BOOL_TYPE
    (5) type -> . DOUBLE_TYPE
    (6) type -> . ID

    INT_TYPE        shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    DOUBLE_TYPE     shift and go to state 21
    ID              shift and go to state 54

    type                           shift and go to state 63

state 36

    (67) statement -> VOID ID . LPAREN param_list RPAREN LBRACE statement RBRACE
    (68) statement -> VOID ID . LPAREN RPAREN LBRACE statement RBRACE

    LPAREN          shift and go to state 64


state 37
